@@ -7,16 +7,30 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 import aptech.project.educhain.common.result.ApiError;
+import aptech.project.educhain.common.result.AppResult;
 import aptech.project.educhain.data.entities.blogs.BlogComment;
 import aptech.project.educhain.data.entities.blogs.UserBlogVote;
 import aptech.project.educhain.domain.dtos.blogs.BlogCommentDTO;
 import aptech.project.educhain.domain.dtos.blogs.UserBlogVoteDTO;
+import aptech.project.educhain.domain.dtos.payment.OrderDTO;
+import aptech.project.educhain.domain.useCases.blogs.BlogUseCases.BlogFilterUseCase.BlogFilterParam;
+import aptech.project.educhain.domain.useCases.blogs.BlogUseCases.FindAllBlogUseCase.GetAllBlogParams;
+import aptech.project.educhain.domain.useCases.payment.order.getAllOrderUseCase.GetAllOrderParams;
 import aptech.project.educhain.endpoint.requests.blogs.CreateBlogReq;
+import aptech.project.educhain.endpoint.requests.blogs.FindAllBlogRequest;
 import aptech.project.educhain.endpoint.requests.blogs.VoteRequest;
+import aptech.project.educhain.endpoint.requests.payment.order.OrderRequest;
+import aptech.project.educhain.endpoint.responses.blogs.FilterBlogResponse;
+import aptech.project.educhain.endpoint.responses.blogs.GetAllBlogResponse;
+import aptech.project.educhain.endpoint.responses.payment.order.GetOrderResponse;
 import jakarta.validation.Valid;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -46,7 +60,7 @@ public class BlogController {
     private String uploadDir;
 
     @Autowired
-    BlogService service;
+    BlogService blogService;
 
     @Autowired
     UserBlogVoteService userBlogVoteService;
@@ -64,17 +78,26 @@ public class BlogController {
     BlogCategoryService blogCategoryService;
 
     @Operation(summary = "Get all blog")
-    @GetMapping("")
-    public List<BlogDTO> findAll() {
-        List<Blog> blogs = service.findAll();
+    @PostMapping("")
+    public ResponseEntity<?> getAllBlogs(@RequestBody FindAllBlogRequest request) {
+        var params = modelMapper.map(request, GetAllBlogParams.class);
 
-        List<Blog> sortedBlogs = blogs.stream()
-                .sorted(Comparator.comparing(Blog::getCreatedAt).reversed())
-                .collect(Collectors.toList());
+        AppResult<Page<BlogDTO>> result = blogService.findAll(params);
+        if (result.isSuccess()) {
+            Page<BlogDTO> blogDTOPage = result.getSuccess();
+            List<GetAllBlogResponse> getAllBlogResponses = blogDTOPage.getContent()
+                    .stream()
+                    .map(blogDTO -> modelMapper.map(blogDTO, GetAllBlogResponse.class))
+                    .collect(Collectors.toList());
 
-        return sortedBlogs.stream()
-                .map(blog -> modelMapper.map(blog, BlogDTO.class))
-                .collect(Collectors.toList());
+            Page<GetAllBlogResponse> responsePage = new PageImpl<>(
+                    getAllBlogResponses,
+                    PageRequest.of(request.getPage(), request.getSize(), Sort.by(request.getSortBy())),
+                    blogDTOPage.getTotalElements());
+
+            return ResponseEntity.ok().body(responsePage);
+        }
+        return ResponseEntity.badRequest().body(result.getFailure().getMessage());
     }
     
 
@@ -95,7 +118,7 @@ public class BlogController {
     @Operation(summary = "Get 1 blog")
     @GetMapping("/{id}")
     public BlogDTO findOne(@PathVariable Integer id) {
-        Blog blog = service.findOneBlog(id);
+        Blog blog = blogService.findOneBlog(id);
 
         BlogDTO blogDTO = modelMapper.map(blog, BlogDTO.class);
         List<BlogCommentDTO> commentDTOs = blog.getBlogComments().stream()
@@ -143,7 +166,7 @@ public class BlogController {
         try {
             String fileName = uploadPhotoService.uploadPhoto(req.getPhoto());
             Blog blog = new Blog();
-            User user = userService.findUserById(req.getUserId());
+            User user = userService.findUserById(req.getId());
             BlogCategory category = blogCategoryService.findBlogCategory(req.getBlogCategoryId());
 
             blog.setUser(user);
@@ -152,7 +175,7 @@ public class BlogController {
             blog.setBlogText(req.getBlogText());
             blog.setPhoto(fileName);
 
-            Blog createdBlog = service.create(blog);
+            Blog createdBlog = blogService.create(blog);
 
             BlogDTO createdBlogDTO = modelMapper.map(createdBlog, BlogDTO.class);
 
@@ -208,7 +231,7 @@ public class BlogController {
         try {
             String fileName = uploadPhotoService.uploadPhoto(req.getPhoto());
 
-            Blog blog = service.findOneBlog(req.getUserId());
+            Blog blog = blogService.findOneBlog(req.getId());
             BlogCategory category = blogCategoryService.findBlogCategory(req.getBlogCategoryId());
 
             blog.setTitle(req.getTitle());
@@ -225,7 +248,7 @@ public class BlogController {
                 Files.deleteIfExists(path.resolve(oldPhoto));
             }
 
-            Blog updatedBlog = service.update(req.getUserId(), blog);
+            Blog updatedBlog = blogService.update(req.getId(), blog);
 
             BlogDTO updatedBlogDTO = modelMapper.map(updatedBlog, BlogDTO.class);
 
@@ -239,32 +262,28 @@ public class BlogController {
     @Operation(summary = "Delete blog")
     @DeleteMapping("/{id}")
     public boolean delete(@PathVariable Integer id) {
-        return service.delete(id);
+        return blogService.delete(id);
     }
 
-    @GetMapping("/filter")
-    public List<BlogDTO> filter(
-            @RequestParam(required = false) String sortStrategy,
-            @RequestParam(required = false) String keyword,
-            @RequestParam(required = false) Integer[] categoryIdArray) {
+    @PostMapping("/filter")
+    public ResponseEntity<?> filter(@RequestBody FilterBlogRequest request) {
+        var params = modelMapper.map(request, BlogFilterParam.class);
 
-        System.out.println(sortStrategy);
-        System.out.println(keyword);
-        System.out.println(Arrays.stream(categoryIdArray).toList());
+        AppResult<Page<BlogDTO>> result = blogService.filter(params);
+        if (result.isSuccess()) {
+            Page<BlogDTO> blogDTOPage = result.getSuccess();
+            List<FilterBlogResponse> filterBlogResponses = blogDTOPage.getContent()
+                    .stream()
+                    .map(blogDTO -> modelMapper.map(blogDTO, FilterBlogResponse.class))
+                    .collect(Collectors.toList());
 
-        List<Blog> blogs = service.findAll();
-        if (categoryIdArray != null && categoryIdArray.length > 0){
-            blogs = service.findByCategory(blogs, categoryIdArray);
+            Page<FilterBlogResponse> responsePage = new PageImpl<>(
+                    filterBlogResponses,
+                    PageRequest.of(request.getPage(), request.getSize()),
+                    blogDTOPage.getTotalElements());
 
+            return ResponseEntity.ok().body(responsePage);
         }
-        if (keyword != null || !keyword.isEmpty() || keyword != ""){
-            blogs = service.search(blogs, keyword);
-
-        }
-
-        if (sortStrategy != null || !sortStrategy.isEmpty() || sortStrategy != "" ){
-            blogs = service.sorting(blogs, service.getSortStrategy(sortStrategy));
-        }
-        return blogs.stream().map(blog -> modelMapper.map(blog, BlogDTO.class)).collect(Collectors.toList());
+        return ResponseEntity.badRequest().body(result.getFailure().getMessage());
     }
 }
